--- a/index.html
+++ b/index.html
@@ -1,22 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>zD98</title>
-    <style>
-        div{  width: 50%;  height: 50%; margin:auto;background-color: aliceblue;color: coral;text-align: center}
-    </style>
 </head>
 <body>
-<div class="div1">This is for Web Learning!</div>
-<script>
-    var oDiv=document.getElementsByTagName("div")[0];
-    oDiv.onmouseover=function(){
-        this.style.color='crimson';
-    }
-    oDiv.onmouseout=function(){
-        this.style.color='coral';
-    }
-</script>
+  This is for web learning.
 </body>
 </html>
