this is for index

--- a/index.html
+++ b/index.html
@@ -4,19 +4,13 @@
     <meta charset="UTF-8">
     <title>zD98</title>
     <style>
-        div{  width: 50%;  height: 50%; margin:auto;background-color: aliceblue;color: coral;text-align: center}
+        body{background-color: #1e1e1e}
     </style>
 </head>
 <body>
-<div class="div1">This is for Web Learning!</div>
+<div style="background-image: url("../image/title.png")"></div>
 <script>
-    var oDiv=document.getElementsByTagName("div")[0];
-    oDiv.onmouseover=function(){
-        this.style.color='crimson';
-    }
-    oDiv.onmouseout=function(){
-        this.style.color='coral';
-    }
+
 </script>
 </body>
 </html>
