--- a/slides/00/index.html
+++ b/slides/00/index.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <title>zD98</title>
     <link rel="stylesheet" href="main.css">
+    <style>
+        .one{background-color: #00688b;width: 100px;height: 100px;position: relative;margin: 15px; border: 5px solid #000011; padding: 10px;}
+        .son{background-color: #ff6b0a;width: 50px;height:50px;position: absolute;float:left;}
+    </style>
 </head>
 <body>
-<div class="div1">00 2015.7.5 to finished.</div>
+<h1>Test for Div float and position </h1>
+<div class="one"><div class="son"></div></div>
+<div class="two"></div>
+<div class="three"></div>
+<div class="for"></div>
 <script>
-
 </script>
 </body>
 </html>
