--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <title>zD98</title>
     <style>
-        body{background-color: #1e1e1e}
+        body{background-color: #1e1e1e;}
     </style>
 </head>
 <body>
-<div style="background-image: url(image/title.png)"></div>
+<div style="width: 800px;height:200px;margin:auto;background-image: url('image/title.png');"></div>
 <script>
 
 </script>
