this is for index

--- a/slides/00/index.html
+++ b/slides/00/index.html
@@ -8,11 +8,19 @@
     </style>
 </head>
 <body>
-<h1>仿-英雄联盟选项卡 </h1>
-<div class="one"><div class="son"></div></div>
-<div class="two"></div>
-<div class="three"></div>
-<div class="for"></div>
+<h1>仿-英雄联盟选项卡</h1>
+
+<div id="div1">
+    <div id="container">
+        <ul>
+            <li><a href="#"><img src="image/0.jpg"></a></li>
+            <li><a href="#"><img src="image/1.jpg"></a></li>
+            <li><a href="#"><img src="image/2.jpg"></a></li>
+            <li><a href="#"><img src="image/3.jpg"></a></li>
+            <li><a href="#"><img src="image/4.jpg"></a></li>
+        </ul>
+    </div>
+</div>
 <script>
 </script>
 </body>
