--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </style>
 </head>
 <body>
-<div style="background-image: url("http://zd98.github.io/image/title.png")"></div>
+<div style="background-image: url("zd98.github.io/image/title.png")"></div>
 <script>
 
 </script>
