--- a/slides/100/index.html
+++ b/slides/100/index.html
@@ -2,13 +2,52 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="css/main.css" rel="stylesheet">
     <script src="../jquery/jquery-2.1.4.js" type="text/javascript"></script>
     <title></title>
 </head>
 <body>
+<div class="box">
+    <ul class="menu">
+        <li class="level1">
+            <a href="#">衬衫</a>
+            <ul class="level2">
+                <li><a>短袖衬衫</a></li>
+                <li><a>长袖衬衫</a></li>
+                <li><a>短袖T恤</a></li>
+                <li><a>长袖T恤</a></li>
+            </ul>
+        </li>
+        <li class="level1">
+            <a href="#">卫衣</a>
+            <ul class="level2">
+                <li><a>开襟卫衣</a></li>
+                <li><a>套头卫衣</a></li>
+                <li><a>运动卫衣</a></li>
+                <li><a>童装卫衣</a></li>
+            </ul>
+
+        </li>
+        <li class="level1">
+            <a href="#">裤子</a>
+            <ul class="level2">
+                <li><a>短裤</a></li>
+                <li><a>休闲裤</a></li>
+                <li><a>牛仔裤</a></li>
+                <li><a>免烫卡其裤</a></li>
+            </ul>
+        </li>
+    </ul>
+</div>
 <script>
-    $(document).ready(function () {
-        alert("Hello jQuery");
+    $(".level1").children("a").next().hide();
+
+    $(".level1 > a").click(function () {
+        $(this).addClass("current")
+                .next().show()
+                .parent().siblings().children("a").removeClass("current")
+                .next().hide();
+        return false;
     });
 </script>
 </body>
