--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         }
 
         .nContainer {
+            width: 800px;
+            height: 80px;
             background-color: black;
         }
 
@@ -68,7 +70,7 @@
 </div>
 <div class="footer">
     <ul class="fContainer">
-        <li><a href="#">联系我</a></li>
+        <li><a>联系我</a></li>
     </ul>
 </div>
 <script>
