update for learning

--- a/slides/01/index.html
+++ b/slides/01/index.html
@@ -2,10 +2,104 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="css/main.css" rel="stylesheet"/>
     <title></title>
 </head>
 <body>
 <h1>仿-淘宝轮转</h1>
 
+<div id="div1">
+    <div class="big">
+        <div class="left"></div>
+        <div class="right"></div>
+        <ul class="selector">
+            <li class="active"></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+        <ul class="level0Ul">
+            <li><a><img src="image/a.jpg"/></a></li>
+            <li><a><img src="image/b.jpg"/></a></li>
+            <li><a><img src="image/c.jpg"/></a></li>
+            <li><a><img src="image/d.jpg"/></a></li>
+            <li><a><img src="image/e.jpg"/></a></li>
+        </ul>
+
+    </div>
+    <div class="small">
+        <div class="left"></div>
+        <div class="right"></div>
+        <ul class="level0Ul">
+            <li>
+                <ul>
+                    <li><a><img src="image/0-0.jpg"></a></li>
+                    <li><a><img src="image/0-1.jpg"></a></li>
+                    <li><a><img src="image/0-2.jpg"></a></li>
+                    <li><a><img src="image/0-3.jpg"></a></li>
+                </ul>
+            </li>
+            <li>
+                <ul>
+                    <li><a><img src="image/1-0.jpg"></a></li>
+                    <li><a><img src="image/1-1.jpg"></a></li>
+                    <li><a><img src="image/1-2.jpg"></a></li>
+                    <li><a><img src="image/1-3.jpg"></a></li>
+                </ul>
+            </li>
+            <li>
+                <ul>
+                    <li><a><img src="image/2-0.jpg"></a></li>
+                    <li><a><img src="image/2-1.jpg"></a></li>
+                    <li><a><img src="image/2-2.jpg"></a></li>
+                    <li><a><img src="image/2-3.jpg"></a></li>
+                </ul>
+            </li>
+            <li>
+                <ul>
+                    <li><a><img src="image/3-0.jpg"></a></li>
+                    <li><a><img src="image/3-1.jpg"></a></li>
+                    <li><a><img src="image/3-2.jpg"></a></li>
+                    <li><a><img src="image/3-3.jpg"></a></li>
+                </ul>
+            </li>
+            <li>
+                <ul>
+                    <li><a><img src="image/4-0.png"></a></li>
+                    <li><a><img src="image/4-1.jpg"></a></li>
+                    <li><a><img src="image/4-2.jpg"></a></li>
+                    <li><a><img src="image/4-3.jpg"></a></li>
+                </ul>
+                <ul>
+                    <li><a><img src="image/4-4.jpg"></a></li>
+                    <li><a><img src="image/4-5.jpg"></a></li>
+                    <li><a><img src="image/4-6.jpg"></a></li>
+                    <li><a><img src="image/4-7.jpg"></a></li>
+                </ul>
+                <ul>
+                    <li><a><img src="image/4-8.jpg"></a></li>
+                    <li><a><img src="image/4-9.jpg"></a></li>
+                    <li><a><img src="image/4-10.jpg"></a></li>
+                    <li><a><img src="image/4-11.jpg"></a></li>
+                </ul>
+            </li>
+            <li>
+                <ul>
+                    <li><a><img src="image/5-0.jpg"></a></li>
+                    <li><a><img src="image/5-1.jpg"></a></li>
+                </ul>
+            </li>
+        </ul>
+        <ul class="selector">
+            <li class="active"></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </div>
+</div>
 </body>
 </html>
