update for learning

--- a/slides/01/index.html
+++ b/slides/01/index.html
@@ -108,6 +108,7 @@
     var oSmallDiv = oDiv.getElementsByClassName("small")[0];
     var aBigLi = oBigDiv.getElementsByClassName("level0Ul")[0].getElementsByTagName("li");
     var aBigSelLi = oBigDiv.getElementsByClassName("selector")[0].getElementsByTagName("li");
+    //获取元素有问题
     var aSmallLi = oSmallDiv.getElementsByClassName("level0Ul")[0].getElementsByTagName("li");
     var aSmallSelLi = oSmallDiv.getElementsByClassName("selector")[0].getElementsByTagName("li");
     for (var i = 0, max = aBigSelLi.length; i < max; i++) {
