update for learning

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         }
 
         .nContainer li {
-            width: 266px;
+            width: 33.33%;
             height: 80px;
             position: relative;
             float: left;
@@ -44,14 +44,19 @@
             color: #f9f9f9;
             top: 30px;
         }
-
         a:hover {
         }
-
         .mainContext {
             width: 800px;
-            height: 400px;
-            background-color: #1e1e1e;
+            height: 600px;
+            background-color: #222222;
+            margin: 10px auto;
+        }
+
+        .footer {
+            width: 800px;
+            height: 100px;
+            background-color: #222222;
             margin: 10px auto;
         }
     </style>
