--- a/slides/01/index.html
+++ b/slides/01/index.html
@@ -30,7 +30,7 @@
         <div class="left"></div>
         <div class="right"></div>
         <ul class="level0Ul">
-            <li>
+            <li class="level1">
                 <ul>
                     <li><a><img src="image/0-0.jpg"></a></li>
                     <li><a><img src="image/0-1.jpg"></a></li>
@@ -38,7 +38,7 @@
                     <li><a><img src="image/0-3.jpg"></a></li>
                 </ul>
             </li>
-            <li>
+            <li class="level1">
                 <ul>
                     <li><a><img src="image/1-0.jpg"></a></li>
                     <li><a><img src="image/1-1.jpg"></a></li>
@@ -46,7 +46,7 @@
                     <li><a><img src="image/1-3.jpg"></a></li>
                 </ul>
             </li>
-            <li>
+            <li class="level1">
                 <ul>
                     <li><a><img src="image/2-0.jpg"></a></li>
                     <li><a><img src="image/2-1.jpg"></a></li>
@@ -54,7 +54,7 @@
                     <li><a><img src="image/2-3.jpg"></a></li>
                 </ul>
             </li>
-            <li>
+            <li class="level1">
                 <ul>
                     <li><a><img src="image/3-0.jpg"></a></li>
                     <li><a><img src="image/3-1.jpg"></a></li>
@@ -62,27 +62,27 @@
                     <li><a><img src="image/3-3.jpg"></a></li>
                 </ul>
             </li>
-            <li>
-                <ul>
+            <li class="level1">
+                <ul class="smallImage">
                     <li><a><img src="image/4-0.png"></a></li>
                     <li><a><img src="image/4-1.jpg"></a></li>
                     <li><a><img src="image/4-2.jpg"></a></li>
                     <li><a><img src="image/4-3.jpg"></a></li>
                 </ul>
-                <ul>
+                <ul class="smallImage">
                     <li><a><img src="image/4-4.jpg"></a></li>
                     <li><a><img src="image/4-5.jpg"></a></li>
                     <li><a><img src="image/4-6.jpg"></a></li>
                     <li><a><img src="image/4-7.jpg"></a></li>
                 </ul>
-                <ul>
+                <ul class="smallImage">
                     <li><a><img src="image/4-8.jpg"></a></li>
                     <li><a><img src="image/4-9.jpg"></a></li>
                     <li><a><img src="image/4-10.jpg"></a></li>
                     <li><a><img src="image/4-11.jpg"></a></li>
                 </ul>
             </li>
-            <li>
+            <li class="level1">
                 <ul>
                     <li><a><img src="image/5-0.jpg"></a></li>
                     <li><a><img src="image/5-1.jpg"></a></li>
@@ -101,15 +101,22 @@
 </div>
 <script>
     function startMove(obj, target) {
-
+        obj.timer = null;
+        var speed = 5;
+        obj.timer = setInterval(function () {
+            obj.style.left -= speed;
+        }, 30);
+        if (target == obj.style.left) {
+            obj.timer = null;
+        }
     }
     var oDiv = document.getElementById("div1");
     var oBigDiv = oDiv.getElementsByClassName("big")[0];
     var oSmallDiv = oDiv.getElementsByClassName("small")[0];
     var aBigLi = oBigDiv.getElementsByClassName("level0Ul")[0].getElementsByTagName("li");
     var aBigSelLi = oBigDiv.getElementsByClassName("selector")[0].getElementsByTagName("li");
-    //获取元素有问题
-    var aSmallLi = oSmallDiv.getElementsByClassName("level0Ul")[0].getElementsByTagName("li");
+
+    var aSmallLi = oSmallDiv.getElementsByClassName("level0Ul")[0].getElementsByClassName("level1");
     var aSmallSelLi = oSmallDiv.getElementsByClassName("selector")[0].getElementsByTagName("li");
     for (var i = 0, max = aBigSelLi.length; i < max; i++) {
         aBigSelLi[i].index = i;
@@ -118,6 +125,16 @@
                 aBigLi[i].style.zIndex = 1;
             }
             aBigLi[this.index].style.zIndex = 2;
+
+        };
+    }
+    for (var i = 0, max = aSmallSelLi.length; i < max; i++) {
+        aSmallSelLi[i].index = i;
+        aSmallSelLi[i].onclick = function () {
+            for (var i = 0, max = aSmallSelLi.length; i < max; i++) {
+                aSmallLi[i].style.zIndex = 1;
+            }
+            aSmallLi[this.index].style.zIndex = 2;
 
         };
     }
