update for learning

--- a/slides/02/index.html
+++ b/slides/02/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>仿-京东商品分类</title>
 </head>
 <body>
 <h3>仿-京东商品分类</h3>
