--- a/slides/03/index.html
+++ b/slides/03/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>仿-携程选项卡表单</title>
 </head>
 <body>
 <h3>仿-携程选项卡表单</h3>
