--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
             color: #f9f9f9;
             top: 30px;
         }
-        a:hover {
-        }
+
         .mainContext {
             width: 800px;
             height: 600px;
@@ -59,27 +58,79 @@
             background-color: #222222;
             margin: 10px auto;
         }
+
+        .slides {
+            position: relative;
+            width: 800px;
+            background-color: #222222;
+            margin: 0 auto;
+        }
+
+        .list {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 800px;
+            height: 400px;
+            display: none;
+            background-color: #111111;
+            color: #d2d2d2;
+        }
     </style>
 </head>
 <body>
-<div class="header"></div>
-<div class="navigation">
-    <ul class="nContainer">
-        <li><a href="#">原生JS</a></li>
-        <li><a href="#">jQuery</a></li>
-        <li><a href="#">HTML5/CSS3</a></li>
-    </ul>
-</div>
-<div class="mainContext">
+<div id="main">
+    <div class="header"></div>
+    <div class="navigation">
+        <ul class="nContainer">
+            <li><a href="#">原生JS</a></li>
+            <li><a href="#">jQuery</a></li>
+            <li><a href="#">HTML5/CSS3</a></li>
+        </ul>
+    </div>
+    <div class="slides">
+        <div id="js" class="list">
+            <h3>javascript</h3>
+            <ul>
+                <li><a href="slides/00" target="_blank">仿-英雄联盟选项卡</a></li>
+                <li><a href="slides/01" target="_blank">仿-淘宝轮转</a></li>
+            </ul>
+        </div>
+        <div id="jq" class="list">
+            <h3>jquery</h3>
+        </div>
+        <div id="hc" class="list">
+            <h3>html/css</h3>
+        </div>
+    </div>
+    <div class="mainContext">
 
-</div>
-<div class="footer">
-    <ul class="fContainer">
-        <li><a>联系我</a></li>
-    </ul>
+    </div>
+    <div class="footer">
+        <ul class="fContainer">
+            <li><a>联系我</a></li>
+        </ul>
+    </div>
 </div>
 <script>
-
+    var oDiv = document.getElementById("main");
+    var aLi = oDiv.getElementsByClassName("nContainer")[0].getElementsByTagName("li");
+    var list = oDiv.getElementsByClassName("list");
+    for (var i = 0, max = aLi.length; i < max; i++) {
+        aLi[i].index = i;
+        aLi[i].onmouseover = function () {
+            list[this.index].style.display = "block";
+            list[this.index].onmouseover = function () {
+                this.style.display = "block";
+            };
+        };
+        aLi[i].onmouseout = function () {
+            list[this.index].style.display = "none";
+            list[this.index].onmouseout = function () {
+                this.style.display = "none";
+            };
+        }
+    }
 </script>
 </body>
 </html>
