update for learning

--- a/slides/03/index.html
+++ b/slides/03/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>仿-携程选项卡表单</title>
+    <title>仿-选择日期</title>
 </head>
 <body>
-<h3>仿-携程选项卡表单</h3>
+<h3>仿-选择日期</h3>
+
 </body>
 </html>
