--- a/slides/04/index.html
+++ b/slides/04/index.html
@@ -3,8 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
+    <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
-<h3>表单操作</h3>
+<h3>仿-腾讯视频</h3>
+
+<p>Tip:子元素绝对定位父级元素overflow会失效</p>
+
+<div id="div1">
+    <div class="p1-ds">
+        <ul class="p1-ds-list">
+            <!--780px 260px-->
+            <li class="open">
+                <div class="p1-ds-row">
+                    <div class="p1-ds-item">
+                        <span class="pic"><image src="image/ds_zjl.png"></image></span>
+                        <h4 class="name"><span class="text text-zjl">周杰伦</span>
+                            <span class="line"></span>
+                        </h4>
+                    </div>
+                    <div class="p1-ds-info">
+                        <div class="con"></div>
+                        <div class="pic-bg">
+                            <img src="image/p1_tutor_zjl.jpg">
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="p1-ds-row">
+                    <div class="p1-ds-item">
+                        <span class="pic"><image src="image/ds_ny.png"></image></span>
+                        <h4 class="name"><span class="text text-ny">那英</span><span class="line"></span></h4>
+                    </div>
+                    <div class="p1-ds-info">
+                        <div class="con"></div>
+                        <div class="pic-bg">
+                            <img src="image/p1_tutor_ny.jpg">
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="p1-ds-row">
+                    <div class="p1-ds-item">
+                        <span class="pic"><image src="image/ds_wf.png"></image></span>
+                        <h4 class="name"><span class="text text-wf">汪峰</span><span class="line"></span></h4>
+                    </div>
+                    <div class="p1-ds-info">
+                        <div class="con"></div>
+                        <div class="pic-bg">
+                            <img src="image/p1_tutor_wf.jpg">
+                        </div>
+                    </div>
+                </div>
+            </li>
+            <li>
+                <div class="p1-ds-row">
+                    <div class="p1-ds-item">
+                        <span class="pic"><image src="image/ds_ycq.png"></image></span>
+                        <h4 class="name"><span class="text text-ycq">庾澄庆</span><span class="line"></span></h4>
+                    </div>
+                    <div class="p1-ds-info">
+                        <div class="con"></div>
+                        <div class="pic-bg">
+                            <img src="image/p1_tutor_ycq.jpg">
+                        </div>
+                    </div>
+                </div>
+            </li>
+        </ul>
+    </div>
+
+</div>
 </body>
 </html>
