update for learning

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
             top: 30px;
         }
 
+        a:hover {
+            color: #F4F4F4;
+        }
         .mainContext {
             width: 800px;
             height: 600px;
@@ -83,9 +86,9 @@
     <div class="header"></div>
     <div class="navigation">
         <ul class="nContainer">
-            <li><a href="#">原生JS</a></li>
-            <li><a href="#">jQuery</a></li>
-            <li><a href="#">HTML5/CSS3</a></li>
+            <li><a href="javascript:void(0)">原生JS</a></li>
+            <li><a href="javascript:void(0)">jQuery</a></li>
+            <li><a href="javascript:void(0)">HTML5/CSS3</a></li>
         </ul>
     </div>
     <div class="slides">
@@ -94,6 +97,7 @@
             <ul>
                 <li><a href="slides/00" target="_blank">仿-英雄联盟选项卡</a></li>
                 <li><a href="slides/01" target="_blank">仿-淘宝轮转</a></li>
+                <li><a href="slides/04" target="_blank">仿-中国好声音</a></li>
             </ul>
         </div>
         <div id="jq" class="list">
