update for learning

--- a/slides/04/index.html
+++ b/slides/04/index.html
@@ -23,7 +23,15 @@
                         </h4>
                     </div>
                     <div class="p1-ds-info">
-                        <div class="con"></div>
+                        <div class="con">
+                            <h4>导师档案:</h4>
+
+                            <p class="summary">青春回忆，周董首次出战《中国好声音》信心爆棚，PK三大元老扬言只为冠军而来。</p>
+
+                            <div class="action">
+                                <a class="p1-ds-btn">导师战队</a>
+                            </div>
+                        </div>
                         <div class="pic-bg">
                             <img src="image/p1_tutor_zjl.jpg">
                         </div>
@@ -37,7 +45,15 @@
                         <h4 class="name"><span class="text text-ny">那英</span><span class="line"></span></h4>
                     </div>
                     <div class="p1-ds-info">
-                        <div class="con"></div>
+                        <div class="con">
+                            <h4>导师档案:</h4>
+
+                            <p class="summary">四朝元老，那英誓捍霸主地位，带出两届冠军底气十足，声称必须与汪峰“对立”。</p>
+
+                            <div class="action">
+                                <a class="p1-ds-btn">导师战队</a>
+                            </div>
+                        </div>
                         <div class="pic-bg">
                             <img src="image/p1_tutor_ny.jpg">
                         </div>
@@ -51,7 +67,15 @@
                         <h4 class="name"><span class="text text-wf">汪峰</span><span class="line"></span></h4>
                     </div>
                     <div class="p1-ds-info">
-                        <div class="con"></div>
+                        <div class="con">
+                            <h4>导师档案:</h4>
+
+                            <p class="summary">摇滚巨人，汪峰本季点评画风突变，“每天都有很多冠军，冠军并不值钱”一语惊人。</p>
+
+                            <div class="action">
+                                <a>导师战队</a>
+                            </div>
+                        </div>
                         <div class="pic-bg">
                             <img src="image/p1_tutor_wf.jpg">
                         </div>
@@ -65,7 +89,15 @@
                         <h4 class="name"><span class="text text-ycq">庾澄庆</span><span class="line"></span></h4>
                     </div>
                     <div class="p1-ds-info">
-                        <div class="con"></div>
+                        <div class="con">
+                            <h4>导师档案:</h4>
+
+                            <p class="summary">悍将归来，从不相信“信心”的庾澄庆坚信：选歌好坏是制胜的关键。</p>
+
+                            <div class="action">
+                                <a>导师战队</a>
+                            </div>
+                        </div>
                         <div class="pic-bg">
                             <img src="image/p1_tutor_ycq.jpg">
                         </div>
