--- a/index.html
+++ b/index.html
@@ -33,18 +33,15 @@
             float: left;
             text-align: center;
         }
-
         .nContainer li:hover {
             background-color: #222222;
         }
-
         a {
             position: relative;
             text-decoration: none;
             color: #f9f9f9;
             top: 30px;
         }
-
         a:hover {
             color: #F4F4F4;
         }
@@ -77,6 +74,16 @@
             height: 400px;
             display: none;
             background-color: #111111;
+            color: #d2d2d2;
+        }
+
+        .list li {
+            margin: 10px;
+            color: #fff;
+            float: left;
+        }
+
+        .list li:hover {
             color: #d2d2d2;
         }
     </style>
