--- a/slides/02/index.html
+++ b/slides/02/index.html
@@ -2,10 +2,60 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>仿-京东商品分类</title>
+    <title>仿-登陆弹出层</title>
+    <style>
+        #header {
+            position: relative;
+            width: 100%;
+            height: 50px;
+            background-color: rgba(255, 255, 255, 0.9);
+        }
+
+        #div1 {
+            position: absolute;
+            left: 0;
+            min-width: 1200px;
+            min-height: 600px;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            background: url("image/bg.jpg") no-repeat;
+        }
+
+        #log {
+            position: absolute;
+            bottom: 10px;
+            right: 50px;
+            width: 100px;
+            height: 30px;
+            background-color: rgba(156, 179, 216, 0.87);
+            text-align: center;
+            color: #fff;
+            line-height: 30px;
+        }
+
+        #log:hover {
+            background-color: rgba(127, 132, 168, 0.87);
+        }
+
+        #log a {
+            color: #fff;
+            text-decoration: none;
+        }
+    </style>
 </head>
 <body>
-<h3>仿-京东商品分类</h3>
+<h3>仿-登陆弹出层</h3>
 
+<div id="div1">
+    <div id="header">
+        <div id="log"><a href="javascript:void(0)">登陆</a></div>
+    </div>
+</div>
+<div id="mask"></div>
 </body>
+<script>
+    var oDiv = document.getElementById("div1");
+    var oBtn = oDiv.getElementById("log");
+</script>
 </html>
