update for learning

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                 <li><a href="slides/00" target="_blank">仿-英雄联盟选项卡</a></li>
                 <li><a href="slides/01" target="_blank">仿-淘宝轮转</a></li>
                 <li><a href="slides/04" target="_blank">仿-中国好声音</a></li>
+                <li><a href="slides/02" target="_blank">仿-登陆弹出层</a></li>
             </ul>
         </div>
         <div id="jq" class="list">
