--- a/slides/02/index.html
+++ b/slides/02/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <title>仿-登陆弹出层</title>
     <style>
-        #header {
+        div {
+            margin: 0;
+            padding: 0;
+        }
+
+        .header {
             position: relative;
             width: 100%;
             height: 50px;
@@ -20,27 +25,51 @@
             top: 0;
             bottom: 0;
             background: url("image/bg.jpg") no-repeat;
+            background-size: 100% 100%;
         }
 
-        #log {
+        #logBtn {
             position: absolute;
             bottom: 10px;
             right: 50px;
             width: 100px;
             height: 30px;
-            background-color: rgba(156, 179, 216, 0.87);
+            background-color: rgba(156, 179, 216, 0.77);
             text-align: center;
             color: #fff;
             line-height: 30px;
         }
 
-        #log:hover {
+        #logBtn:hover {
             background-color: rgba(127, 132, 168, 0.87);
         }
 
-        #log a {
+        #logBtn a {
             color: #fff;
             text-decoration: none;
+        }
+
+        #mask {
+            position: absolute;
+            background-color: rgba(0, 0, 0, 0.71);
+            top: 0;
+            left: 0;
+            z-index: 1;
+        }
+
+        #login {
+            position: absolute;
+            width: 480px;
+            height: 320px;
+            background-color: rgba(255, 255, 255, 0.28);
+            z-index: 2;
+        }
+
+        #login .header {
+            height: 35px;
+            text-align: center;
+            line-height: 35px;
+            font-size: 1.5em;
         }
     </style>
 </head>
@@ -48,14 +77,41 @@
 <h3>仿-登陆弹出层</h3>
 
 <div id="div1">
-    <div id="header">
-        <div id="log"><a href="javascript:void(0)">登陆</a></div>
+    <div class="header">
+        <div id="logBtn"><a href="javascript:void(0)">登陆</a></div>
     </div>
 </div>
-<div id="mask"></div>
 </body>
 <script>
     var oDiv = document.getElementById("div1");
-    var oBtn = oDiv.getElementById("log");
+    var oBtn = document.getElementById("logBtn");
+    var mask = document.getElementById("mask");
+    var sWidget = document.body.scrollWidth;
+    var sHeight = document.body.scrollHeight;
+
+
+    var wHeight = document.documentElement.clientHeight;
+
+    oBtn.onclick = function () {
+
+        var oMask = document.createElement("div");
+        oMask.id = "mask";
+        oMask.style.width = sWidget + "px";
+        oMask.style.height = sHeight + "px";
+        document.body.appendChild(oMask);
+
+
+        var oLogin = document.createElement("div");
+        oLogin.id = "login";
+        oLogin.innerHTML = "<div class='header'>登陆 </div>";
+        document.body.appendChild(oLogin);
+        oLogin.style.left = (sWidget - oLogin.offsetWidth) / 2 + "px";
+        oLogin.style.top = (wHeight - oLogin.offsetHeight) / 2 + "px";
+
+        oMask.onclick = function () {
+            document.body.removeChild(oLogin);
+            document.body.removeChild(oMask);
+        };
+    }
 </script>
 </html>
